--- a/index.html
+++ b/index.html
@@ -17,25 +17,22 @@
 <body>
 <header>
     <div id='wrap'>
-       <img src='media/content/rabbit_main.jpg' alt='sailings in root vegetable-shaped sailboats on the ocean, they are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out'>
-        <a style='width: 11%;height: 13%;top: 37%;left: 32%' alt="signaling with flags" title="signaling with flags" href="site/flags_maritime.html">
-          <span>Quebec Romeo One</span></a>
+       <img src='media/content/rabbit_main.jpg' alt='Sailing in root vegetable-shaped sailboats on the ocean, the sailors are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out. The sailboat that is far away is signaling with the Quebec, Romeo and One flags. The turnip-shaped boat is flying the answering pennant.'>
+        <a style='width: 11%;height: 13%;top: 37%;left: 32%' title='Link to a page about signaling with flags' href="site/flags_maritime.html"></a>
   </div>
+      <p class='noprint'>Signaling using flags.</p>
+
   <img src='media/interface/title.png' alt='Rabbit Waves' class='title'>
 </header>
 <main>
 </main>
 <footer>
-  <div id='wrapfooter'>
-      <img src='media/interface/footer.jpg' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="hundredrabbits" title="100r.co" href="https://100r.co">
-          <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="BY-NC-SA 4.0" href="https://github.com/rekkabell/rabbitwaves">
-          <span>license</span></a>
-        <a class='about' alt="about" href="site/about.html">
-          <span>about</span></a>
-  </div>
-
+    <div id='wrapfooter'>
+      <img src='media/interface/footer.jpg' loading='lazy' alt='About | hundredrabbits | © 2024 BY-NC-SA 4.0'></a>
+        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
+        <a class='about' title='Link to about page' href="site/about.html"></a>
+    </div>
 </footer>
 </body>
 </html>
