--- a/site/about.html
+++ b/site/about.html
@@ -16,27 +16,26 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
+    <a href="../index.html"><img src='../media/interface/title.png' loading='lazy' alt='Rabbit Waves' aria-label='Homepage' class='title'></a>
+    <h1>About</h1>
 </header>
 <main>
-  <img src='../media/interface/links.jpg' alt='links are indicated by areas with dotted lines'></a>
-  <img src='../media/interface/pages.jpg' alt='pages' class='title'></a>
-  <gallery>
-      <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' alt='Hand flag semaphore'></a>
-      <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' alt='International Maritime Signal Flags'></a>
-      <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' alt='Day shapes'></a>
-  </gallery>
+  <img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'></a>
+<h2>Pages</h2>
+  <img src='../media/interface/pages.jpg' alt='Pages:' class='title'></a>
+    <nav aria-label='Page navigation'>
+      <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
+      <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
+      <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
+    </nav>
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
-          <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
-          <span>license</span></a>
-        <a class='about' alt="about" href="about.html">
-          <span>about</span></a>
-  </div>
+        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
+        <a class='about' title='Link to about page' href="about.html"></a>
+    </div>
 </footer>
 </body>
 </html>
