--- a/site/flags.html
+++ b/site/flags.html
@@ -16,39 +16,36 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
+    <a href="../index.html"><img src='../media/interface/title.png' loading='lazy' alt='Rabbit Waves' aria-label='Homepage' class='title'></a>
+    <h1>Hand Flag Semaphore</h1>
 </header>
 <main>
 
 <div id='wrap'>
-  <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy' alt='a guide on the uses and ways to use hand flag to communicate from afar'>
-    <a style='width: 9%;height: 2%;top: 3%;left: 26%' alt="oscar flag" title="oscar flag" href="flags_maritime.html">
-          <span>oscar</span></a>
-    <a style='width: 13%;height: 2%;top: 8%;left: 58%' alt="sempahore history PDF - 4 MB" title="semaphore history PDF - 4 MB" href="../media/docs/semaphore_history.pdf">
-          <span>Semaphore history</span></a>
-    <p class='noprint'>Flag semaphore is a way of communicating at a distance by using hand flags. Information - such as the letters of the alphabet, numerals, etc - are encoded by the position of the flags. At sea, the Oscar flag acts as a signaling flag (on land, it's the Papa flag). To start signaling letters, signal J. To start signaling numerals, signal the hand flag position for numerals. To request permission to start a transmission, signal the "attention" signal(which doubles as the error signal). The one receiving the signal uses the "ready to receive a signal" flag position, which consists of raising the two flags overhead, then to drop them to the rest position (only once). The one receiving the signals ends the transmission with the same "ready to receive" flag signal. The one receiving the signal can then reply with the "attention" signal to make a reply. At night lighted wants replace the hand flags. It's also possible to signal using your arms only, but signals are easier to read with flags.</p>
-<div id='wrap'>
-  <img src='../media/content/2024_semaphore.jpg' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+  <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy'>
+    <a style='width: 9%;height: 2%;top: 3%;left: 26%' title="Link to Maritime Flags page" href="flags_maritime.html"></a>
+    <a style='width: 13%;height: 2%;top: 8%;left: 58%' title="semaphore history PDF - 4 MB" aria-label='Open PDF' href="../media/docs/semaphore_history.pdf"></a>
+    <p class='noprint'>Flag semaphore is a way of communicating at a distance by using hand flags. Information, such as the letters of the alphabet, numerals, etc, are encoded by the position of the flags. At sea, the Oscar flag acts as a signaling flag (on land, it's the Papa flag).<br>The display motions for the latin alphabet flag semaphore are circular, based on an early semaphore design (popham semaphore) consisting of a 9 m (30 ft) vertical pole with two movable 2.4 m (8 ft) arms fixed to the pole by horizontal pivots at the ends (one in the middle of the pole, the other at the top).<br> To start signaling letters, signal J. To start signaling numerals, signal the hand flag position for numerals. To request permission to start a transmission, signal the "attention" signal(which doubles as the error signal). The one receiving the signal uses the "ready to receive a signal" flag position, which consists of raising the two flags overhead, then to drop them to the rest position (only once). The one receiving the signals ends the transmission with the same "ready to receive" flag signal. The one receiving the signal can then reply with the "attention" signal to make a reply. At night lighted wants replace the hand flags. It's also possible to signal using your arms only, but signals are easier to read with flags.</p>
+  </div>
 
-   <img src='../media/content/semaphore_anim.gif' loading ='lazy' alt='rabbits waving two hand flags in 27 different positions to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
+<h2>Hand flag semaphore positions</h2>
+  <img src='../media/content/2024_semaphore.jpg' alt='A & 1 (rabbit with right arm at 7-8 oclock, and left arm at 6 oclock), B & 2 (rabbit with right arm at 9 oclock and left arm at 6 oclock), C & 3 (rabbit with right arm at 10-11 oclock, and left arm at 6 oclock), D & 4 (rabbit with right arm at 12 oclock, and left arm at 6 oclock), E & 5 (rabbit with right arm at 6 oclock and left arm at 1-2 oclock), F & 6 (rabbit with right arm at 6 oclock and left arm at 3 oclock), G & 7 (rabbit with right arm at 6 oclock and left arm at 4-5 oclock), H & 8 (rabbit with right arm at 7-8 oclock and left arm at 9 oclock), I & 9 (rabbit with right arm position at 7-8 oclock and left arm at 10-11 oclock), J & Letters Start (rabbit with right arm at 12 oclock and left arm at 3 oclock), K & 0 (rabbit with right arm at 7-8 oclock and left arm at 12 oclock), L (rabbit with right arm at 7-8 oclock and left arm at 1-2 oclock), M (rabbit with right arm at 7-8 oclock and left arm at 3 oclock), N (rabbit with right arm at 7-8 oclock and left arm at 4-5 oclock), O (rabbit with left arm at 10-11 oclock and right arm at 9 oclock), P (rabbit right right arm at 9 oclock and left arm at 12 oclock), Q (rabbit with right arm at 9 oclock and left arm at 1-2 oclock), R (rabbit with right arm at 9 oclock and left arm at 3 oclock), S (rabbit with right arm at 9 oclock and left arm at 4-5 oclock), T (rabbit with right arm at 10-11 oclock and left arm at 12 oclock), U (rabbit with right arm at 10-11 oclock and left arm at 1-2 oclock), V (rabbit with right arm at 12 oclock and left arm at 4-5 oclock), W (rabbit with right arm at 1-2 oclock with left arm at 3 oclock), X (rabbit with right arm at 1-2 oclock and left arm at 4-5 oclock), Y (rabbit with right arm at 10-11 oclock and left arm at 3 oclock), Z (rabbit with right arm at 4-5 oclock and left arm at 3 oclock), Space & Rest (rabbit with arms down, crossed one over the other), Error & Attention (rabbit with right arm at 10-11 oclock and left arm at 1-2 oclock in one position, then down with the right arm at 7-8 oclock and left arm at 4-5 oclock), Cancel & Ignore Previous Signal (rabbit with right arm at 10-11 oclock and left arm at 4-5 oclock), # & Numbers Start (rabbit with right arm at 12 oclock and left arm at 1-2 oclock), Ready to Receive (position 1 both arms up, position 2 both arms down' loading ='lazy'>
+
+  <img src='../media/content/semaphore_anim.gif' loading ='lazy' alt='an animation of rabbits waving two hand flags in 27 different positions, described in the above text, to indicate the letters of the alphabet, including a position to indicate the need for a space between words'>
 
 <div id='wrap'>
-  <img src='../media/content/2024_japanese_semaphore.jpg' loading ='lazy' alt='a description of how the japanese sephamore system works'>
-   <a style="width: 21%;height: 8%;top: 8%;left: 59%" alt="japanese semaphore Wikipedia article" title="japanese semaphore" href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">
-          <span>Japanese Semaphore</span></a>
-    <p class='noprint'>The Japanese devised their own semaphore system adapted to fit their writing system which has way more characters than the Latin alphabet. Most characters require two flag positions to complete(an image of the two flag signals for the Japanese character A)... some require three(an image of the three flag signals for the Japanese character HO). When signaling the motion describes the angles of the brush strokes used when writing, it also takes the order of the strokes into account. Below the text is a graphic of an example of stroke order for the Japanese characters A and HO.</p>  
-<div id='wrap'>
+  <img src='../media/content/2024_japanese_semaphore.jpg' alt='An image features a bird signaling the two flag positions for the letter A: the bird is holding a red flag in their right hand at 9 oclock, and a white flag in their left hand at 7-8 oclock. Next to it, is the same bird holding flags in a new position, with the right hand holding the red flag at 7-8 oclock and the left hand holding the white flag at 1-2 oclock. Another image features a bird signaling the three flag positions for the letter HO: the bird is holding a red flag in their right hand at 9 oclock, and a white flag in their left hand at 3 oclock. Next to it, is the same bird holding flags in a new position, with the right hand holding the red flag at 12 oclock and the left hand holding the white flag at 6 oclock. Finally, the last position is the right hand holding the red flag at 10-11 oclock and the left hand holding the white flag at 1-2 oclock. The last image is a graphic of an example of stroke order for the Japanese characters A and HO.' loading ='lazy'>
+   <a style="width: 21%;height: 8%;top: 8%;left: 59%" title="Japanese semaphore Wikipedia page" href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank"></a>
+      <p class='noprint'>The Japanese devised their own semaphore system adapted to fit their writing system which has way more characters than the Latin alphabet.<br>Most characters require two flag positions to complete.<br>Some require three.<br>When signaling the motion describes the angles of the brush strokes used when writing, it also takes the order of the strokes into account.</p>  
+<div>
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
-          <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
-          <span>license</span></a>
-        <a class='about' alt="about" href="about.html">
-          <span>about</span></a>
-  </div>
+        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
+        <a class='about' title='Link to about page' href="about.html"></a>
+    </div>
 </footer>
 </body>
 </html>
