--- a/site/morse.html
+++ b/site/morse.html
@@ -16,31 +16,62 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
+    <a href="../index.html"><img src='../media/interface/title.png' loading='lazy' alt='Rabbit Waves' title='Return to Rabbit Waves slash page' aria-label='Homepage' class='title'></a>
+    <h1>International Morse Code</h1>
 </header>
 <main>
-  <img src='../media/content/2024_morse_intro.jpg' loading ='lazy' alt='an introduction to what morse is, what its made up of'>
-    <p class='noprint'>The International Morse Code is a way to communicate that consists of short and long sounds that penetrate interference with greater quality than spoken words. The sounds are encoded are and expressed as: Dots, or Dits, and Dashes, or Dahs. There are... 1)26 basic latin letters (a-z) 2) One accented latin letter 3) Arabic numerals (0-9) 4) Some punctuation & prosigns. Prosigns, or procedrual signals, are shorthand signals, like SOS, which are fun as one word rather than as separate letters.</p>
+  <img src='../media/content/2024_morse_intro.jpg' alt='There is an illustration of a rabbit with their body curled into a ball to represent a DIT, and another with their body stretched out horizontally to represent a DAH. Later on the image, a merganser pronounces the accented letter é aloud, as well as its Morse equivalent, dit dit dah dit dit' loading ='lazy'>
+    <p class='noprint'>The International Morse Code is a way to communicate that consists of short and long sounds that penetrate interference with greater quality than spoken words.<br>The sounds are encoded are and expressed as: Dots, or Dits and Dashes, or Dahs.<br>There are... 1)26 basic latin letters (a-z) 2) One accented latin letter 3) Arabic numerals (0-9) 4) Some punctuation & prosigns.<br>Prosigns, or procedural signals, are shorthand signals, like SOS, which are fun as one word rather than as separate letters.</p>
 
-     <img src='../media/content/2024_morse_letters.jpg' loading ='lazy' alt='a series of tables featuring all of the letters and numerals that were encoded into Morse Code'>
-   <p class='noprint'>Letter table: A = dit dah, B = Dah dit dit dit, C = Dah dit dah dit, D = Dah dit dit, E = Dit, F = Dit dit dah dit, G = Dah dah dit, H = Dit dit dit dit, I = Dit dit, J = Dit dah dah dah, K = Dah dit dah, L = Dit dah dit dit, M = Dah dah, N = Dah dit, O = Dah dah dah, P = Dit dah dah dit, Q = Dah dah dit dah, R = Dit dah dit, S = Dit dit dit, T = Dah, U = Dit dit dah, V = Dit dit dit dah, W = Dit dah dah, X = Dah dit dit dah, Y = Dah dit dah dah, & Z = Dah dah dit dit. A gull interjects suddenly, saying, "Most used letters were assigned shorter codes!" Number table: 1 = Dit dah dah dah dah, 2 = Dit dit dah dah dah, 3 = Dit dit dit dah dah, 4 = Dit dit dit dit dah, 5 = Dit dit dit dit dit, 6 = Dah dit dit dit dit, 7 = Dah dah dit dit dit, 8 = Dah dah dah dit dit, 9 = Dah dah dah dah dit, and 0 = Dah dah dah dah dah. Now is a section about Cut Numbers: Most numerals have a short form(not official), that temporarily borrows some of the encoding used for letters to communicate faster. The sender & receiver both have to understand that numbers are sent prior to transmitting. A table of cut numbers begins: 1 = Dit dah(which is usually the code for A), 2 = Dit dit dah (code for U), 3 = Dit dit dit dah (code for V), 4 = (no short form), 5 = Dit (code for E), 6 = (no short form), 7 = Dah dit dit dit (code for B), 8 = Dah dit dit (code for D), 9 = Dah dit (code for N) and 0 = Dah (code for T). A side note for the number 5 reads as follows: Some people send the uncit number for 5, because it is easy to mistake one dit for another signal.</p>
+<h2>Morse Code Encoding for Letters and Numbers</h2>
+  <div id='wrap'>
+     <img src='../media/content/2024_morse_letters.jpg' alt='A herring gull wearing an army cap says that most used letters were assigned shorter codes' loading ='lazy'>
+       <a style='width: 37%;height: 3%;top: 72%;left: 60%;' title="Link to dichotomic search table" href="https://en.wikipedia.org/wiki/Morse_code#Alternative_display_of_common_characters_in_International_Morse_code" target="_blank"></a>
+  </div>
+   <p class='noprint'>Letter table: A = dit dah, B = Dah dit dit dit, C = Dah dit dah dit, D = Dah dit dit, E = Dit, F = Dit dit dah dit, G = Dah dah dit, H = Dit dit dit dit, I = Dit dit, J = Dit dah dah dah, K = Dah dit dah, L = Dit dah dit dit, M = Dah dah, N = Dah dit, O = Dah dah dah, P = Dit dah dah dit, Q = Dah dah dit dah, R = Dit dah dit, S = Dit dit dit, T = Dah, U = Dit dit dah, V = Dit dit dit dah, W = Dit dah dah, X = Dah dit dit dah, Y = Dah dit dah dah, & Z = Dah dah dit dit. Number table: 1 = Dit dah dah dah dah, 2 = Dit dit dah dah dah, 3 = Dit dit dit dah dah, 4 = Dit dit dit dit dah, 5 = Dit dit dit dit dit, 6 = Dah dit dit dit dit, 7 = Dah dah dit dit dit, 8 = Dah dah dah dit dit, 9 = Dah dah dah dah dit, and 0 = Dah dah dah dah dah.</p>
 
-  <img src='../media/content/2024_morse_handflags.jpg' loading ='lazy' alt='rabbits showing the positions to communicate morse with hand flags'>
-    <p class='noprint'>Morse signaling by hand flags or arms : dash, dot, separation of dots and dashes, separation of letters/groups/words, request for repetition if by the receiving station or erase signals if made by the transmitting station. Allow for enough time between dots and dashes and between letters, groups, or words.</p>
+<h2>Cut Numbers</h2>
+    <img src='../media/content/2024_morse_cutnumbers.jpg' loading ='lazy'>
+      <p class='noprint'>Most numerals have a short form(not official), that temporarily borrows some of the encoding used for letters to communicate faster. The sender & receiver both have to understand that numbers are sent prior to transmitting.<br>A table of cut numbers begins: 1 = Dit dah(which is usually the code for A), 2 = Dit dit dah (code for U), 3 = Dit dit dit dah (code for V), 4 = (no short form), 5 = Dit (code for E), 6 = (no short form), 7 = Dah dit dit dit (code for B), 8 = Dah dit dit (code for D), 9 = Dah dit (code for N) and 0 = Dah (code for T).<br>A side note for the number 5 reads as follows: Some people send the uncit number for 5, because it is easy to mistake one dit for another signal.</p>
 
-  <img src='../media/content/2024_repeat_handflags.jpg' loading ='lazy' alt='a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags'>
-    <p class="noprint">a murrelet at sea on a carrot-hulled catamaran waving flags in a circle to signal to a rabbit on another boat, the murrelet is requesting for the message to be repeated, the rabbit sees this and says that they are going to repeat the message with hand flags.</p>
+  <div id='wrap'>
+   <img src='../media/content/2024_morse_learning.jpg' alt='For flags, a rabbit is holding two hand flags. For lights, a rabbit is holding a lighted oil lamp topped with binoculars. For sound a rabbit is blowing into a vuvuzela. Another illustration consists of a merganser youngling is listening to dits and dahs through a set of headphones, sweating, looking very attentive.' loading ='lazy'>
+    <a style='width: 22%;height: 25%;top: 8%;left: 16%;' title="Link to Morse Code with hand flags" href="morse_flags.html"></a>
+    <a style='width: 13%;height: 14%;top: 53%;left: 25%;' title="Audio file for A-Z in Morse Code" href="https://en.wikipedia.org/wiki/File:A_through_Z_in_Morse_code.ogg"></a>
+  </div>
+      <p class='noprint'>When listening to combinations of Dits & Dahs, it is essential to learn to hear the particular character as a whole sound with a distinct rhythm.<br>Learn to recognize them by their sound patterns, not as separate elements. Think in code when reading, spare time practice will commit the melodies to the brain.</p>
+
+<h2>Basic Rules for Morse Code</h2>
+   <img src='../media/content/2024_morse_basicrules.jpg' alt='There is a graphic showing the actual timing of the words Rabbit Waves, as well as a drawing of many rabbits running close together, resembling a wave.' loading ='lazy'>
+   <p class='noprint'>Rule 1: When sending Morse Code, these are no capital letters. Rule 2: The duration of a "dit" is the basic unit of time in Morse Code. Rule 3: A "dah" is 3 times the duration of a "dit". Rule 4: A period with no signal acts as a "Space" lasting 1 "dit" long. Rule 5: Each letter of a word is separated by a "Space" that is 3 "dits" long. Rule 6: Each word is separated by a "Space" lasting 7 "dits."</p>
+
+<h2>Timing for Morse Code</h2>
+  <img src='../media/content/2024_morse_timing.jpg' loading ='lazy'>
+   <p class='noprint'>Below is a visualization of the actual timing of Morse Code, again, with each symbol lasting 1 "dit." Following is a graphic showing the timing using "Rabbit Waves" as an example. The graphic follows the timing rules outlined in Rules 1-6 outlined above.</p>
+
+<h2>Brevity Codes</h2>
+<div id='wrap'>
+  <img src='../media/content/2024_morse_brevitycodes.jpg' alt='An illustration with a merganser and their child aboard a banana-hulled dugout, the adult has a vuvuzela in hand and is communicating the code QOD2? with it in Morse Code' loading ='lazy'>
+  <a style='width: 11%;height: 4%;top: 0%;left: 62%;' alt="Brevity Codes" title="Brevity Codes | 7.1 MiB" aria-label='Open PDF' href="../media/docs/abbreviations.pdf"></a>
+</div>
+  <p class='noprint'>Brevity codes are designed to communicate complex information quickly, with greater accuracy, with a few words or code:<br>Rule 1: Q codes ranging from QOA to QQZ are reserved for use at sea. Rule 2: When using the letter C after certain abbreviations, the message takes on a negative sense. Rule 3: When using the letters N O after certain abbreviations, the message takes on a negative sense. Rule 4: Appending other groups, place names, numbers to abbreviations provides more detail.<br>Examples of abbreviations: QOD "Can you communicate with me in..." 0. Dutch, 1. English, 2. French, 3. German, 4. Greek, 5. Italian, 6. Japanese, 7. Norwegian, 8. Russian 9. Spanish.<br>QRD "Where are you bound for and where are you from?" QUA "Have you news of ... (name/call sign)?" QSQ "Have you a doctor on board?" QUX "Do you have any navigational warnings or gale warnings in force?"</p>
+
+<h2>Morse Code in other languages</h2>
+<div id='wrap'>
+  <img src='../media/content/2024_morse_nonlatin.jpg' alt='An illustration shows an anthropomorphised red-footed booby(Sula Sula), with a hat and a coat with a fluffy collar, saying 中文信息 (Zhōngwén xìnxī), meaning Information in Chinese, which renders into the code as 0022 2429 0207 1873' loading ='lazy'>
+    <a style='width: 12%;height: 5%;top: 26%;left: 58%;' title="Chinese Telegraphy Wikipedia page" href="https://en.wikipedia.org/wiki/Chinese_telegraph_code"></a>
+     <a style='width: 17%;height: 7%;top: 18%;left: 8' title="Documents for Morse Code in other languages" href="http://www.itu.int/rec/R-REC-M.1677-1-200910-I/"></a>
+  </div>
+    <p class='noprint'>Morse code was initially designed for latin characters, but have since been adapted to languages like Russian & Arabic. An example shows the Prosign WAIT in Russian, Arabic and in Morse Code(dit dah dit dit dit).<br>Languages with more characters, like Chinese, weren't as easy to transpose to Morse.<br>Instead of dots & dashes being assigned to characters directly, they assigned them to numbers instead. Characters were each assigned a 4-digit code ranging from 0000-9999, arranged & numbered in dictionary order according to their radicals & strokes.<br>An example shows the Morse numbers assigned to the Chinese characters used to spell out "wait"(等待). 等 was assigned 4583, and 待 was assigned 1769.<br>Because Chinese doesn't use non-digit characters, it is possible to simplify the morse code for digits(numbers can be quite long).</p>
+
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' loading ='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co">
-          <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves">
-          <span>license</span></a>
-        <a class='about' alt="about" href="about.html">
-          <span>about</span></a>
-  </div>
+        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
+        <a class='about' title='Link to about page' href="about.html"></a>
+    </div>
 </footer>
 </body>
 </html>
