--- a/site/day_shapes.html
+++ b/site/day_shapes.html
@@ -16,24 +16,22 @@
 </head>
 <body>
 <header>
-    <a href="../index.html"><img src='../media/interface/title.png' loading ='lazy' alt='Rabbit Waves' class='title'></a>
+    <a href="../index.html"><img src='../media/interface/title.png' loading='lazy' alt='Rabbit Waves' title='Return to Rabbit Waves slash page' aria-label='Homepage' class='title'></a>
+    <h1>Day Shapes</h1>
 </header>
 <main>
 
-  <img src='../media/content/2024_dayshapes.jpg' loading ='lazy' alt='an explanation of how to use day shapes on boats'>
-    <p class='noprint'>Day Shapes are signals raised during daylight hours to indicate their status to other vessels. The signals consist of geometric shapes, like a sphere, a cylinder, a diamond and a cone. When combined together, the shapes communicate different messages: A single ball means "at anchor". An inverted cone means "Under sail & power". A diamond means "towing vessel", or "vessel towed". Two cones with their points touching in the middle means "Fishing with limited maneuvrability", when paired with a single cone it means that there is outlying gear more than 150 M from the vessel. Two balls over one another means "not under command". 3 balls laid horizontally, with the middle ball raised higher, means "minesweeping". 3 balls over each other means "aground". A diamond sitting between two balls vertically means "restricted maneuvrability", it is paired with: 1) 2 diamonds laid vertically over one another, which indicates the safe side to pass the vessel 2) 2 spheres over one another vertically, which indicates the side where the obstruction exists. A vertical cylinder means "constrained by draft". A square over a sphere means "in distress".</p>
+  <img src='../media/content/2024_dayshapes.jpg' alt='An illustration of a turnip-shaped sailboat laying at anchor and flying a black sphere near the top of its mast' loading ='lazy'>
+    <p class='noprint'>Day Shapes are signals raised during daylight hours to indicate their status to other vessels.<br>The signals consist of geometric shapes, like a sphere, a cylinder, a diamond, and a cone.<br>When combined together, the shapes communicate different messages: A single ball means "at anchor". An inverted cone means "Under sail & power". A diamond means "towing vessel", or "vessel towed". Two cones with their points touching in the middle means "Fishing with limited maneuvrability", when paired with a single cone it means that there is outlying gear more than 150 M from the vessel. Two balls over one another means "not under command". 3 balls laid horizontally, with the middle ball raised higher, means "minesweeping". 3 balls over each other means "aground". A diamond sitting between two balls vertically means "restricted maneuvrability", it is paired with: 1) 2 diamonds laid vertically over one another, which indicates the safe side to pass the vessel 2) 2 spheres over one another vertically, which indicates the side where the obstruction exists. A vertical cylinder means "constrained by draft". A square over a sphere means "in distress".</p>
 
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' loading='lazy' alt='hundredrabbits | copyright 2024 BY-NC-SA 4.0'>
-        <a class='hundredrabbits' alt="100r.co" title="100r.co" href="https://100r.co" target="_blank">
-          <span>100r.co</span></a>
-        <a class='license' alt="BY-NC-SA 4.0" title="license" href="https://github.com/rekkabell/rabbitwaves" target="_blank">
-          <span>license</span></a>
-        <a class='about' alt="about" href="about.html">
-          <span>about</span></a>
-  </div>
+      <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
+        <a class='about' title='Link to about page' href="about.html"></a>
+    </div>
 </footer>
 </body>
 </html>
