--- a/site/flags.html
+++ b/site/flags.html
@@ -23,8 +23,8 @@
 
 <div id='wrap'>
   <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy'>
-    <a style='width: 9%;height: 2%;top: 3%;left: 26%' title="Link to Maritime Flags page" href="flags_maritime.html"></a>
-    <a style='width: 13%;height: 2%;top: 8%;left: 58%' title="semaphore history PDF - 4 MB" aria-label='Open PDF' href="../media/docs/semaphore_history.pdf"></a>
+    <a style='width: 6%;height: 4%;top: 10%;left: 27%;' title="Link to Maritime Flags page" href="flags_maritime.html"></a>
+    <a style='width: 10%;height: 4%;top: 26%;left: 60%;' title="semaphore history PDF - 4 MB" aria-label="Open PDF" href="../media/docs/semaphore_history.pdf" target="_blank"></a>
     <p class='noprint'>Flag semaphore is a way of communicating at a distance by using hand flags. Information, such as the letters of the alphabet, numerals, etc, are encoded by the position of the flags. At sea, the Oscar flag acts as a signaling flag (on land, it's the Papa flag).<br>The display motions for the latin alphabet flag semaphore are circular, based on an early semaphore design (popham semaphore) consisting of a 9 m (30 ft) vertical pole with two movable 2.4 m (8 ft) arms fixed to the pole by horizontal pivots at the ends (one in the middle of the pole, the other at the top).<br> To start signaling letters, signal J. To start signaling numerals, signal the hand flag position for numerals. To request permission to start a transmission, signal the "attention" signal(which doubles as the error signal). The one receiving the signal uses the "ready to receive a signal" flag position, which consists of raising the two flags overhead, then to drop them to the rest position (only once). The one receiving the signals ends the transmission with the same "ready to receive" flag signal. The one receiving the signal can then reply with the "attention" signal to make a reply. At night lighted wants replace the hand flags. It's also possible to signal using your arms only, but signals are easier to read with flags.</p>
   </div>
 
