--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -49,7 +49,7 @@
 <div id='wrap'>
   <img src='../media/content/2024_otherlanguages_ics.jpg' alt='Featured is a drawing of a happy murrelet, dressed in warm clothes, holding a copy of the ICS book. There is also an illustration featuring a conversation between a spectacled guillemot and a herring gull. The spectacled guillemot speaks Japanese, while the herring gull speaks Russian. The guillemot is yelling Tasukete! but the herring gull does not understand. The guillemot then yells out the coded meaning for Victor, ビクター! ビクター(Bikutaa! Bikutaa!). The herring gull understood this, and says Я понимаю (Ya ponimayu, to mean I understand).' loading='lazy'>
     <p class='noprint'>One practical use of the International Code of Signals(ICS) is that all of the messages are standardized and come in 9 languages: English, French, Italian, German, Japanese, Spanish, Norwegian, Russian and Greek. Each of the nine languages has a book with equivalent messages assigned to the same code.<br>The signal flag Victor was assigned "I require assistance" as a coded meaning.</p>
-    <a style='width: 16%;height: 8%;top: 22%;left: 56%' title="International code of signals PDF (40 MB)" arial-label='Open PDF' href="../media/docs/ics_pub102bk.pdf" target="_blank"></a>
+    <a style='width: 16%;height: 8%;top: 22%;left: 56%' title="International code of signals PDF (40 MB)" arial-label='Open PDF' href="../media/docs/ics_pub102bk.pdf" target="_blank"><span>International code of signals PDF</span></a>
 </div>
 
 <h2>How to communicate with another vessel using flags</h2>
@@ -59,8 +59,8 @@
 
 <div id='wrap'>
   <img src='../media/content/2024_handflag_intro.jpg' alt='a rabbit at sea aboard a turnip-shaped boat waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags' loading='lazy'>
-    <p class='noprint'>It is also possible to send signals by flag semaphore. </p>
-    <a style='width: 25%;height: 13%;top: 25%;left: 21%' title="Hand flag semaphore page" href="flags.html"></a>
+    <p class='noprint'>It is also possible to send signals by flag semaphore.</p>
+    <a style='width: 25%;height: 13%;top: 25%;left: 21%' title="Hand flag semaphore page" href="flags.html"><span>Flag Semaphore</span></a>
 </div>
 </main>
 <footer>
