--- a/site/morse.html
+++ b/site/morse.html
@@ -26,7 +26,7 @@
 <h2>Morse Code Encoding for Letters and Numbers</h2>
   <div id='wrap'>
      <img src='../media/content/2024_morse_letters.jpg' alt='A herring gull wearing an army cap says that most used letters were assigned shorter codes' loading ='lazy'>
-       <a style='width: 37%;height: 3%;top: 72%;left: 60%;' title="Link to dichotomic search table" href="https://en.wikipedia.org/wiki/Morse_code#Alternative_display_of_common_characters_in_International_Morse_code" target="_blank"></a>
+       <a style='width: 37%;height: 3%;top: 72%;left: 60%;' title="Link to dichotomic search table" href="https://en.wikipedia.org/wiki/Morse_code#Alternative_display_of_common_characters_in_International_Morse_code" target="_blank"><span>Dichotomic Search Table</span></a>
   </div>
    <p class='noprint'>Letter table: A = dit dah, B = Dah dit dit dit, C = Dah dit dah dit, D = Dah dit dit, E = Dit, F = Dit dit dah dit, G = Dah dah dit, H = Dit dit dit dit, I = Dit dit, J = Dit dah dah dah, K = Dah dit dah, L = Dit dah dit dit, M = Dah dah, N = Dah dit, O = Dah dah dah, P = Dit dah dah dit, Q = Dah dah dit dah, R = Dit dah dit, S = Dit dit dit, T = Dah, U = Dit dit dah, V = Dit dit dit dah, W = Dit dah dah, X = Dah dit dit dah, Y = Dah dit dah dah, & Z = Dah dah dit dit. Number table: 1 = Dit dah dah dah dah, 2 = Dit dit dah dah dah, 3 = Dit dit dit dah dah, 4 = Dit dit dit dit dah, 5 = Dit dit dit dit dit, 6 = Dah dit dit dit dit, 7 = Dah dah dit dit dit, 8 = Dah dah dah dit dit, 9 = Dah dah dah dah dit, and 0 = Dah dah dah dah dah.</p>
 
@@ -36,8 +36,8 @@
 
   <div id='wrap'>
    <img src='../media/content/2024_morse_learning.jpg' alt='For flags, a rabbit is holding two hand flags. For lights, a rabbit is holding a lighted oil lamp topped with binoculars. For sound a rabbit is blowing into a vuvuzela. Another illustration consists of a merganser youngling is listening to dits and dahs through a set of headphones, sweating, looking very attentive.' loading ='lazy'>
-    <a style='width: 22%;height: 25%;top: 8%;left: 16%;' title="Link to Morse Code with hand flags" href="morse_flags.html"></a>
-    <a style='width: 13%;height: 14%;top: 53%;left: 25%;' title="Audio file for A-Z in Morse Code" href="https://en.wikipedia.org/wiki/File:A_through_Z_in_Morse_code.ogg"></a>
+    <a style='width: 22%;height: 25%;top: 8%;left: 16%;' title="Link to Morse Code with hand flags" href="morse_flags.html"><span>Morse Code with Hand Flags</span></a>
+    <a style='width: 13%;height: 14%;top: 53%;left: 25%;' title="Audio file for A-Z in Morse Code" href="https://en.wikipedia.org/wiki/File:A_through_Z_in_Morse_code.ogg"><span>Audio File for A-Z in Morse Code</span></a>
   </div>
       <p class='noprint'>When listening to combinations of Dits & Dahs, it is essential to learn to hear the particular character as a whole sound with a distinct rhythm.<br>Learn to recognize them by their sound patterns, not as separate elements. Think in code when reading, spare time practice will commit the melodies to the brain.</p>
 
@@ -52,15 +52,15 @@
 <h2>Brevity Codes</h2>
 <div id='wrap'>
   <img src='../media/content/2024_morse_brevitycodes.jpg' alt='An illustration with a merganser and their child aboard a banana-hulled dugout, the adult has a vuvuzela in hand and is communicating the code QOD2? with it in Morse Code' loading ='lazy'>
-  <a style='width: 11%;height: 4%;top: 0%;left: 62%;' alt="Brevity Codes" title="Brevity Codes | 7.1 MiB" aria-label='Open PDF' href="../media/docs/abbreviations.pdf"></a>
+  <a style='width: 11%;height: 4%;top: 0%;left: 62%;' alt="Brevity Codes" title="Brevity Codes | 7.1 MiB" aria-label='Open PDF' href="../media/docs/abbreviations.pdf"><span>Brevity Codes for Use at Sea (PDF)</span></a>
 </div>
   <p class='noprint'>Brevity codes are designed to communicate complex information quickly, with greater accuracy, with a few words or code:<br>Rule 1: Q codes ranging from QOA to QQZ are reserved for use at sea. Rule 2: When using the letter C after certain abbreviations, the message takes on a negative sense. Rule 3: When using the letters N O after certain abbreviations, the message takes on a negative sense. Rule 4: Appending other groups, place names, numbers to abbreviations provides more detail.<br>Examples of abbreviations: QOD "Can you communicate with me in..." 0. Dutch, 1. English, 2. French, 3. German, 4. Greek, 5. Italian, 6. Japanese, 7. Norwegian, 8. Russian 9. Spanish.<br>QRD "Where are you bound for and where are you from?" QUA "Have you news of ... (name/call sign)?" QSQ "Have you a doctor on board?" QUX "Do you have any navigational warnings or gale warnings in force?"</p>
 
 <h2>Morse Code in other languages</h2>
 <div id='wrap'>
   <img src='../media/content/2024_morse_nonlatin.jpg' alt='An illustration shows an anthropomorphised red-footed booby(Sula Sula), with a hat and a coat with a fluffy collar, saying 中文信息 (Zhōngwén xìnxī), meaning Information in Chinese, which renders into the code as 0022 2429 0207 1873' loading ='lazy'>
-    <a style='width: 12%;height: 5%;top: 26%;left: 58%;' title="Chinese Telegraphy Wikipedia page" href="https://en.wikipedia.org/wiki/Chinese_telegraph_code"></a>
-     <a style='width: 17%;height: 7%;top: 18%;left: 8' title="Documents for Morse Code in other languages" href="http://www.itu.int/rec/R-REC-M.1677-1-200910-I/"></a>
+    <a style='width: 12%;height: 5%;top: 26%;left: 58%;' title="Chinese Telegraphy Wikipedia page" href="https://en.wikipedia.org/wiki/Chinese_telegraph_code"><span>Chinese Telegraphy</span></a>
+     <a style='width: 17%;height: 7%;top: 18%;left: 8' title="Documents for Morse Code in other languages" href="http://www.itu.int/rec/R-REC-M.1677-1-200910-I/"><span>Morse Code in Other Languages</span></a>
   </div>
     <p class='noprint'>Morse code was initially designed for latin characters, but have since been adapted to languages like Russian & Arabic. An example shows the Prosign WAIT in Russian, Arabic and in Morse Code(dit dah dit dit dit).<br>Languages with more characters, like Chinese, weren't as easy to transpose to Morse.<br>Instead of dots & dashes being assigned to characters directly, they assigned them to numbers instead. Characters were each assigned a 4-digit code ranging from 0000-9999, arranged & numbered in dictionary order according to their radicals & strokes.<br>An example shows the Morse numbers assigned to the Chinese characters used to spell out "wait"(等待). 等 was assigned 4583, and 待 was assigned 1769.<br>Because Chinese doesn't use non-digit characters, it is possible to simplify the morse code for digits(numbers can be quite long).</p>
 
