--- a/site/flags.html
+++ b/site/flags.html
@@ -20,7 +20,13 @@
     <h1>Hand Flag Semaphore</h1>
 </header>
 <main>
-
+  <nav>
+    <ul>
+      <li><a href="flags_maritime.html">International Maritime Flag Signals</a></li>
+      <li><a href="../media/docs/semaphore_history.pdf" target="_blank">Semaphore History PDF</li>
+      <li><a href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">Japanese Flag Semaphore</a></li>
+    </ul>
+  </nav>
 <div id='wrap'>
   <img src='../media/content/2024_handflags_howto.jpg' loading ='lazy'>
     <a style='width: 6%;height: 4%;top: 10%;left: 27%;' title="Link to Maritime Flags page" href="flags_maritime.html"><span>International Maritime Flag Signals</span></a>
