--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -20,6 +20,13 @@
     <h1>International Maritime Signal flags</h1>
 </header>
 <main>
+  <nav>
+    <ul>
+      <li><a href="day_shapes.html">Day Shapes</a></li>
+      <li><a href="../media/docs/ics_pub102bk.pdf" target="_blank">International Code of Signals PDF</li>
+      <li><a href="flags.html">Flag Semaphore</a></li>
+    </ul>
+  </nav>
   <img src='../media/content/2024_signaling_intro.jpg' alt='A small spectacled guillemot says the word good in Japanese, there is also a small illustratin of two tiny character on separate mountain tops trying to speak to each other from afar, but they dont understand each other' loading='lazy'>
     <p class='noprint'>The International Code of Signals is a system of signals and codes designed to communicate important safety and navigational messages when speaking is difficult (because of language barriers, distance, etc). A standardized alphabet was created (see below image), along with a spoken word form for each one, designed to set apart similar-sounding letters like B, V and D. Each letter/numeral was assigned a flag:</p>
 
