--- a/site/morse.html
+++ b/site/morse.html
@@ -20,6 +20,16 @@
     <h1>International Morse Code</h1>
 </header>
 <main>
+    <nav>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Morse_code#Alternative_display_of_common_characters_in_International_Morse_code">Dichotomic Search Table</a></li>
+      <li><a href="morse_flags.html" target="_blank">Morse Code With Flags</li>
+      <li><a href="https://en.wikipedia.org/wiki/File:A_through_Z_in_Morse_code.ogg" target="_blank">Audio File for A-Z in Morse Code</a></li>
+      <li><a href="../media/docs/abbreviations.pdf">Brevity Codes for Use at Sea (PDF)</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Chinese_telegraph_code" target="_blank">Chinese Telegraph Code</a></li>
+      <li><a href="http://www.itu.int/rec/R-REC-M.1677-1-200910-I/" target="_blank">Morse Code in Other Languages</a></li>
+    </ul>
+  </nav>
   <img src='../media/content/2024_morse_intro.jpg' alt='There is an illustration of a rabbit with their body curled into a ball to represent a DIT, and another with their body stretched out horizontally to represent a DAH. Later on the image, a merganser pronounces the accented letter é aloud, as well as its Morse equivalent, dit dit dah dit dit' loading ='lazy'>
     <p class='noprint'>The International Morse Code is a way to communicate that consists of short and long sounds that penetrate interference with greater quality than spoken words.<br>The sounds are encoded are and expressed as: Dots, or Dits and Dashes, or Dahs.<br>There are... 1)26 basic latin letters (a-z) 2) One accented latin letter 3) Arabic numerals (0-9) 4) Some punctuation & prosigns.<br>Prosigns, or procedural signals, are shorthand signals, like SOS, which are fun as one word rather than as separate letters.</p>
 
