--- a/site/about.html
+++ b/site/about.html
@@ -22,12 +22,17 @@
 <main>
   <img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'></a>
 <h2>Pages</h2>
+  <nav>
+    <ul>
+      <li><a href="flags.html">Flag Semaphore</a></li>
+      <li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
+      <li><a href="day_shapes.html">Day Shapes</a></li>
+    </ul>
+  </nav>
   <img src='../media/interface/pages.jpg' alt='Pages:' class='title'></a>
-    <nav aria-label='Page navigation'>
       <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
       <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
       <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
-    </nav>
 </main>
 <footer>
     <div id='wrapfooter'>
