--- a/site/about.html
+++ b/site/about.html
@@ -20,7 +20,7 @@
     <h1>About</h1>
 </header>
 <main>
-  <img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'></a>
+  <img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'>
 <h2>Pages</h2>
   <nav>
     <ul>
@@ -29,7 +29,7 @@
       <li><a href="day_shapes.html">Day Shapes</a></li>
     </ul>
   </nav>
-  <img src='../media/interface/pages.jpg' alt='Pages:' class='title'></a>
+  <img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
       <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
       <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
       <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
@@ -38,8 +38,8 @@
     <div id='wrapfooter'>
         <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
-        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
-        <a class='about' title='Link to about page' href="about.html"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
+        <a class='about' href="about.html" title='Link to about page'></a>
     </div>
 </footer>
 </body>
