--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='media/interface/footer.jpg' loading='lazy' alt='About | hundredrabbits | © 2024 BY-NC-SA 4.0'></a>
+      <img src='media/interface/footer.jpg' loading='lazy' alt='About | hundredrabbits | © 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
         <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
         <a class='about' title='Link to about page' href="site/about.html"></a>
