--- a/site/day_shapes.html
+++ b/site/day_shapes.html
@@ -27,10 +27,10 @@
 </main>
 <footer>
     <div id='wrapfooter'>
-      <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
-        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
-        <a class='about' title='Link to about page' href="about.html"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
+        <a class='about' href="about.html" title='Link to about page'></a>
     </div>
 </footer>
 </body>
