--- a/site/flags.html
+++ b/site/flags.html
@@ -23,7 +23,7 @@
   <nav>
     <ul>
       <li><a href="flags_maritime.html">International Maritime Flag Signals</a></li>
-      <li><a href="../media/docs/semaphore_history.pdf" target="_blank">Semaphore History PDF</li>
+      <li><a href="../media/docs/semaphore_history.pdf" target="_blank">Semaphore History PDF</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Flag_semaphore#Japanese_semaphore" target="_blank">Japanese Flag Semaphore</a></li>
     </ul>
   </nav>
@@ -49,8 +49,8 @@
     <div id='wrapfooter'>
         <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
-        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
-        <a class='about' title='Link to about page' href="about.html"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
+        <a class='about' href="about.html" title='Link to about page'></a>
     </div>
 </footer>
 </body>
