--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -23,7 +23,7 @@
   <nav>
     <ul>
       <li><a href="day_shapes.html">Day Shapes</a></li>
-      <li><a href="../media/docs/ics_pub102bk.pdf" target="_blank">International Code of Signals PDF</li>
+      <li><a href="../media/docs/ics_pub102bk.pdf" target="_blank">International Code of Signals PDF</a></li>
       <li><a href="flags.html">Flag Semaphore</a></li>
     </ul>
   </nav>
@@ -74,8 +74,8 @@
     <div id='wrapfooter'>
         <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
-        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank">
-        <a class='about' title='Link to about page' href="about.html"></a>
+        <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
+        <a class='about' href="about.html" title='Link to about page'></a>
     </div>
 </footer>
 </body>
