--- a/site/about.html
+++ b/site/about.html
@@ -30,9 +30,11 @@
     </ul>
   </nav>
   <img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
+      <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
       <a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
       <a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
-      <a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
+      <a href="morse.html"><img src='../media/interface/morse_code.jpg' title='Morse Code'></a>
+      <a href="morse_flags.html"><img src='../media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
 </main>
 <footer>
     <div id='wrapfooter'>
