--- a/site/about.html
+++ b/site/about.html
@@ -21,6 +21,16 @@
 </header>
 <main>
 	<img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'>
+	<h2>Support</h2>
+	<nav>
+		<ul>
+			<li><a href="https://buy.stripe.com/eVa2br27kdpB17adQT" target="_blank">Stripe Donation</a></li>
+			<li><a href="https://paypal.me/hundredrabbits" target="_blank">Paypal Donation</a></li>
+			<li><a href="https://hundredrabbits.itch.io" target="_blank">Itch.io Store</a></li>
+			<li><a href="https://patreon.com/hundredrabbits" target="_blank">Patreon Support</a></li>
+			<li><a href="https://liberapay.com/hundredrabbits/donate" target="_blank">Liberapay Support</a></li>
+		</ul>
+	</nav>
 	<h2>Pages</h2>
 	<nav>
 		<ul>
@@ -35,6 +45,15 @@
 	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
 	<a href="morse.html"><img src='../media/interface/morse_code.jpg' title='Morse Code'></a>
 	<a href="morse_flags.html"><img src='../media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
+	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
+	<div id='wrapsupport'>
+		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
+		<a class='stripe' href="https://buy.stripe.com/eVa2br27kdpB17adQT" target="_blank"></a>
+		<a class='paypal' href="https://paypal.me/hundredrabbits" target="_blank"></a>
+		<a class='itchio' href="https://hundredrabbits.itch.io" target="_blank"></a>
+		<a class='patreon' href="https://patreon.com/hundredrabbits" target="_blank"></a>
+		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" target="_blank"></a>
+	</div>
 </main>
 <footer>
     <div id='wrapfooter'>
