--- a/site/about.html
+++ b/site/about.html
@@ -48,11 +48,11 @@
 	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
 	<div id='wrapsupport'>
 		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
-		<a class='stripe' href="https://buy.stripe.com/eVa2br27kdpB17adQT" target="_blank"></a>
-		<a class='paypal' href="https://paypal.me/hundredrabbits" target="_blank"></a>
-		<a class='itchio' href="https://hundredrabbits.itch.io" target="_blank"></a>
-		<a class='patreon' href="https://patreon.com/hundredrabbits" target="_blank"></a>
-		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" target="_blank"></a>
+		<a class='stripe' href="https://buy.stripe.com/eVa2br27kdpB17adQT" title='Donate via Stripe' target="_blank"></a>
+		<a class='paypal' href="https://paypal.me/hundredrabbits" title='Donate via Paypal' target="_blank"></a>
+		<a class='itchio' href="https://hundredrabbits.itch.io" title='Buy a book, game or tool from our itch.io store' target="_blank"></a>
+		<a class='patreon' href="https://patreon.com/hundredrabbits" title='Support us on Patreon' target="_blank"></a>
+		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" title='Support us on Liberapay' target="_blank"></a>
 	</div>
 </main>
 <footer>
