--- a/site/about.html
+++ b/site/about.html
@@ -34,12 +34,16 @@
 	<h2>Pages</h2>
 	<nav>
 		<ul>
+			<li><a href="aircraft.html">Air to Ground Signals</a></li>
+			<li><a href="morse_code.html">Morse Code</a></li>
+			<li><a href="morse_flags.html">Morse Flags</a></li>
 			<li><a href="flags.html">Flag Semaphore</a></li>
 			<li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
 			<li><a href="day_shapes.html">Day Shapes</a></li>
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
+	<a href="aircraft.html"><img src='../media/interface/aircraft.jpg' title='Air to ground signals'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
 	<a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
 	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
@@ -54,6 +58,7 @@
 		<a class='patreon' href="https://patreon.com/hundredrabbits" title='Support us on Patreon' target="_blank"></a>
 		<a class='liberapay' href="https://liberapay.com/hundredrabbits/donate" title='Support us on Liberapay' target="_blank"></a>
 	</div>
+	
 </main>
 <footer>
     <div id='wrapfooter'>
