--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<a style='width: 11%;height: 13%;top: 37%;left: 32%' title='Link to a page about signaling with flags' href="site/flags_maritime.html"><span>International Maritime Signal Flags</span></a>
 	</div>
 	<p class='noprint'>Signaling using flags.</p>
-	<img src='media/interface/title.png' alt='Rabbit Waves'>
+	<img src='media/interface/title.png' width='45%' alt='Rabbit Waves'>
 </header>
 <main>
 </main>
